--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.3.1",
-    "socket.io": "^4.7.0"
+    "socket.io": "^4.7.0",
+    "vue": "^3.3.4"
   }
 }
