--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.29.4",
     "mongoose": "^7.3.1",
     "socket.io": "^4.7.0",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vuex": "^4.0.2"
   }
 }
