--- a/gocalendar/package.json
+++ b/gocalendar/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "chart.js": "^4.3.3",
     "core-js": "^3.8.3",
+    "form-data": "^4.0.0",
     "sass": "^1.63.6",
     "sweetalert": "^2.1.2",
     "vue": "^3.2.13",
