--- a/gocalendar/package.json
+++ b/gocalendar/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "a-color-picker": "^1.2.1",
     "axios": "^1.4.0",
     "chart.js": "^4.3.3",
     "core-js": "^3.8.3",
