--- a/gocalendar/package.json
+++ b/gocalendar/package.json
@@ -14,7 +14,9 @@
     "core-js": "^3.8.3",
     "form-data": "^4.0.0",
     "sass": "^1.63.6",
+    "socket.io-client": "^4.7.2",
     "sweetalert": "^2.1.2",
+    "toastify-js": "^1.12.0",
     "vue": "^3.2.13",
     "vue-router": "^4.2.2"
   },
