--- a/gocalendar/configApi.json
+++ b/gocalendar/configApi.json
@@ -1,4 +1,7 @@
 {
-    "apiAddress":"http://127.0.0.1",
-    "apiPort": "3000"
+    "apiAddress":"http://192.168.1.9",
+    "apiPort": "3000",
+    "apiAddress1":"http://127.0.0.1",
+    "clientAddress":"http://localhost",
+    "clientPort":":8080"
 }
