--- a/gocalendar/package.json
+++ b/gocalendar/package.json
@@ -16,6 +16,7 @@
     "sass": "^1.63.6",
     "socket.io-client": "^4.7.2",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.7.32",
     "toastify-js": "^1.12.0",
     "vue": "^3.2.13",
     "vue-router": "^4.2.2"
