--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   },
   "homepage": "https://github.com/LuKe2Ink/Progetto_Web#readme",
   "dependencies": {
+    "axios": "^1.6.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "gridfs-stream": "^1.1.1",
+    "holidayapi": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.3.1",
