--- a/gocalendar/package.json
+++ b/gocalendar/package.json
@@ -1,13 +1,19 @@
 {
   "name": "gocalendar",
+  "icon":"logo.ico",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "electron:build": "vue-cli-service electron:build",
+    "electron:serve": "vue-cli-service electron:serve",
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps",
     "production": "vue-cli-service serve --mode production"
   },
+  "main": "background.js",
   "dependencies": {
     "a-color-picker": "^1.2.1",
     "axios": "^1.4.0",
@@ -27,9 +33,12 @@
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "electron": "^13.0.0",
+    "electron-devtools-installer": "^3.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "sass-loader": "^13.3.2"
+    "sass-loader": "^13.3.2",
+    "vue-cli-plugin-electron-builder": "~2.1.1"
   },
   "eslintConfig": {
     "root": true,
